<resources>
	<string name="app_name">TiB Centrul Vechi</string>
	<string name="TIB.about">TiB Bucureşti - Centrul Vechi \n
		\n Contact TiB:
		\n \t email: <a href="mailto:turistinbucuresti@gmail.com">turistinbucuresti@gmail.com</a>   
		\n \t web: <a href="http://www.turistinbucurestiro.blogspot.com"> turistinbucurestiro.blogspot.com </a>
		\n
	</string>
	<string name="quit">Doriţi să părăsiţi aplicaţia ?</string>
	<string name="yes">Da</string>
	<string name="cancel">Renunţă</string>
	<string name="btn_back">Înapoi</string>
	<string name="rate">Evaluează aplicaţia în Google Play</string>
	<string name="btn_next">Următorul</string>
	<string name="btn_home">Acasă</string>
	<string name="btn_select">Mergi la ..</string>
	<string name="source">surse</string>
	<string name="picture">poză</string>
	<string name="menu_about">Despre</string>
	<string name="menu_exit">Închide TiB</string>
	<string name="menu_source">Surse</string>
	<string name="menu_feedback">Contact</string>
	<string name="menu_settings">Setări</string>
	<string name="menu_tts">TTS</string>
	<string name="font_size">Mărime font: </string>
	<string name="tts_error">nu s-a putut iniţializa. Repetaţi acţiunea. </string>
<string name="CV.0.name">.TiB - Centrul Vechi</string>
<string name="CV.0.info"> \t Vă propunem un ghid turistic pentru a descoperi istoria clădirilor, a străzilor şi a personajelor care au marcat istoria Bucureştiului dar mai ales a Centrului Vechi de la 1386 până în zilele noastre.\n
Veţi afla care este povestea Curţii Domneşti, a hanului lui Manuc, veţi găsi locul unde s-au inventat micii, veţi afla care este legătura între această zonă şi termenul puşcărie, vom trece pe lângă hotelul unde s-a hotărât Unirea Principatelor Române de la 1859, vom păşi pe strada pe care a locuit Mihai Eminescu sau Toma Caragiu şi multe altele.\n
</string>
<string name="CV.0.source"><a href=" http://www.apmnir.ro/map.php"> apmnir.ro </a></string>
<string name="CV.0.foto">cv_00_han_manuc</string>
<string name="CV.0.foto_source"></string>
<string name="CV.1.name">Piaţa Unirii</string>
<string name="CV.1.info">Traseul nostru începe de la gura de metrou Piaţa Unirii 2, de lângă clădirea unde este astăzi sediul BRD Unirii.\n
Istoria acestui loc a fost marcată de Regulamentul Organic,  reglementat între anii 1831-1832 care preciza că în capitală trebuiesc amenajate 10 pieţe alimentare, astfel, a fost ridicată Piaţa Mare (Piaţa Ghica) vizavi de Hanul lui Manuc.\n
După un timp, piaţa este considerată insalubră, nepotrivită cu cerinţele unui oraș aflat în plină dezvoltare, este demolată și se ia hotărârea de a se construi o hală în Piaţa Ghica, după modelul celor de la Paris.\n
În zona Piaţa Unirii, la poalele Dealului Mitropoliei, exista în acea perioadă, Palatul Bibescu care aparţinuse lui Constantin Brâncoveanu, domn al Ţării Româneşti între ani 1688 - 1714.\n
Gheorghe Bibescu (domnitor între 1843 - 1848) a intrat în posesia palatului prin căsătoria cu Zoe Brâncoveanu, ultima moștenitoare a familiei Brâncoveanu. \n  
În 1848 este nevoit să abdice deși la presiunea maselor acceptă termenii proclamaţiei de la Islaz din 1848 care prevedea independenţa administrativă și legislativă, separarea puterilor și dezrobirea ţiganilor. Semnarea actului care a devenit Constituţia paşoptistă s-a făcut în Palatul Bibescu.\n
Palatul Bibescu întră în patrimoniul Primăriei iar între anii 1869-1874 clădirea se degradează iar mai târziu este demolată, în locul ei fiind construită în 1872 piaţa de legume, numită apoi Piaţa Bibescu. \n
Hala Mare a fost construită pe locul Pieţei Mari, pe lângă vechea Primărie, în timpul lui Alexandru Ioan Cuza, domnitorul Principatelor Unite ale Moldovei și Ţării Românești între anii 1859–1866. Hala Mare a fost redenumită Centrală apoi Hala Unirii în amintirea Unirii de la 24 ianuarie 1859, când în zona Mitropoliei s-au strâns 30.000 de oameni pentru a-și exprima susţinerea faţă de domnitorul Cuza. Clădirea Hala Mare a fost la vremea respectivă cea mai mare construcţie din capitală.\n
Deoarece în Hala Unirii se comercializa doar carne, s-a construit între anii 1887–1888, în apropiere de locul unde astăzi se află Magazinul Unirea, o hală de peşte, dotată cu bazine pentru păstrarea peștelui viu și depozite. \n
În 1883 s-a ridicat o hală de fructe, iar mai târziu, în 1889, la halele deja existente se va adăuga și una de păsări. De asemenea, de jur împrejurul clădirilor au fost instalate pavilioane unde se puteau vinde legume, fructe și brânzeturi.\n
Pe locul unde sunt clădirile de apartamente cu reclame pentru OMV, Siemens și Optinova, a existat Spitalul Brâncovenesc, fondat de Doamna Safta Brâncoveanu la 1835.\n
Piaţa de astăzi nu semăna deloc cu ceea ce era atunci, fiind mult mai deschisă, mai aerisită. Din piaţă se puteau zări turnurile Bisericii 	Domniţa Bălaşa, acum acoperite de blocurile pomenite mai sus. \n
În Piaţa Sf. Anton, zona Centrului Vechi, s-a mai construit în 1885 o hală de flori care a fost demolată în anii 1960.\n
Piaţa Bibescu a fost transformată în 1906 într-una mai modernă și mai civilizată. Ansamblul acestor construcţii va primi denumirea de Halele Centrale.\n
La inaugurare, Hala Centrală avea 2.700 metri pătraţi de spaţiu comercial, cel pentru tarabe având 10.812 metri pătraţi. Piaţa Bibescu Vodă este desfiinţată în 1936 din ordinul lui Carol al II-lea. \n
Zona devine una insalubră așa că piaţa și halele, cu excepţia celei mari (Hala Unirii) au fost demolate din dispoziţia lui Carol al II-lea, ocazie cu care se acoperă râul Dâmboviţa cu placă de beton, de la Piaţa Senatului (Naţiunilor Unite) până după Piaţa Unirii.\n
În perioada interbelică, Halele Centrale îşi vor schimba numele în Piaţa 8 iunie, în amintirea proclamării ca rege a lui Carol al II-lea, ce avusese loc în 1930. \n
Când generalul Ion Antonescu a fost numit Conducătorul Statului, Piaţa 8 Iunie a devenit Piaţa 6 Septembrie, data \"biruinţei legionare\". Aici și-au ţinut \"cămășile verzi\" marea manifestaţie atunci când România a devenit Stat Naţional-Legionar (14 septembrie 1940). La manifestaţie au participat Generalul Antonescu și Horia Sima, liderul legionarilor.\n
Venirea la putere a comuniștilor a coincis cu o nouă schimbare a numelui Halelor Centrale, acestea purtând denumirea de Piaţa Unirii până la desfiinţare. \n
La sfârșitul anilor \'70, din cauză că vreme îndelungata nu au existat lucrări de recondiţionare și de întreţinere specifice, Piaţa Unirii a redevenit un loc neîngrijit și insalubru, preferat însă de bucureșteni nu atât datorită tradiţiei, cât faptului că produsele aveau preţuri accesibile. \n
În 1977, pe locul unde a fost un cartier evreiesc a fost construit Magazinul Unirea, extins în 1986.\n
Spitalul Brâncovenesc și Hala au fost demolate la sfârşitul anilor \'80, când în timpul lui Ceaușescu a fost construit Bulevardul Victoria Socialismului, actualul Bulevard al Unirii parte a Centrului Civic.\n
Piaţa agro alimentară a fost mutată în 1987 în incinta complexului din spatele magazinului Unirea (așa numitul Circ al foamei) unde a fost amenajată o zonă cu tarabe. \n
Dacă ar fi să identificăm fostele clădiri în funcţie de cele care au supravieţuit până astăzi atunci imaginaţi-vă ca peste drum de Hanul lui Manuc era impunătoarea Hala Unirii, pe locul parcului din faţa Magazinului Unirea era Hala de Pește, pe colţul șirului de clădiri care duce în Piaţa Constituţiei împreună cu Biserica Domniţa Bălașa se găseau Așezămintele Brancovenești (Spitalul Brâncovenesc) iar pe zona unde sunt acum fântânile de la Unirii, porţiunea înspre dealul Mitropoliei se găsea Palatul Brâncoveanu Bibescu unde a fost construită Piaţa de legume Bibescu. \n 
</string>
<string name="CV.1.source">
<a href="http://www.bucharestunknown.blogspot.com/2010/01/piata-unirii.html">bucharestunknown.blogspot.com </a>, 
<a href="http://www.lecturirecenzate.ro/2011/06/11/hala-unirii-din-bucuresti">lecturirecenzate.ro</a>, <a href="http://www.rezistenta.net/2007/10/nomenclatorul-stradal-partea-iv-1.html">rezistenta.net</a>	, <a href="http://www.metropotam.ro/Locuri-de-vizitat/Atunci-si-acum-Piata-Unirii-art9993853400/">metropotam.ro</a>
</string>
<string name="CV.1.foto">cv_01_piata_unirii_1927_via_transira</string>
<string name="CV.1.foto_source"><a href="http:// transira.ro"> transira.ro </a></string>
<string name="CV.2.name">Strada și bazarul Bazaca</string>
<string name="CV.2.info"> Pe locul blocului cu sediul BRD de la staţia de Metrou Unirii, a existat până în anii \'30 strada Bazaca care făcea legătura cu strada Halelor (Piaţa Unirii), Piaţa Sf. Anton (numită și Piaţa de Flori) și strada Carol (azi str. Franceză) și se continua peste drum cu strada Calea Moșilor.\n
Pe această stradă a existat Hanul Bazaca, construit în 1821, cu prăvălii la parter și camere de închiriat la etaj. Numele hanului vine de la Bezaca Anastasie care în sec. XIX era în slujba armatei \rruse, secretarul contelui Prozorovski, stabilit aici în timpul ocupaţiei Principatelor române. \n
Tot aici se putea vedea magazinul întemeiat de Constantin Panaiot apoi în proprietatea lui Theodor Atanasiu &amp; Co devenit vestitul \"La vulturul de mare cu peștele în gheare\" unde se puteau găsi ţesături, mătăsuri, mercerie etc. Magazinul se va muta mai târziu în spatele actualului magazin Cocor.\n
În anii \'30 această stradă s-a transformat într-un adevărat bazar, comercianţii își întindeau marfa de la un capăt la altul dar, deși era un loc strâmt și greu de pătruns, strada era un adevărat furnicar al Bucureștiului. \n
Majoritatea clădirilor de pe Bazaca au fost demolate pentru a se realiza bulevardul Ion C. Brătianu (fost Brâncoveanu, fost b-dul. 1848) în jurul anului 1936, în timpul primarului Dem. I. Dobrescu. \n
Clădirea de lângă sediul BRD, care se învecinează cu Hanul Manuc, cu o cofetărie la parter, a supravieţuit demolărilor din \'36. \n
</string>
<string  name="CV.2.source">
<a href="http://www.metropotam.ro/Locuri-de-vizitat/Povesti-de-Bucuresti-Strada-Bazaca-un-bazar-de-veselie-art8369057993/"> metropotam.ro </a>,
<a href="http://www.bucurestiivechisinoi.ro/2011/03/strada-bazaca-bazarul-uitat/">bucurestiivechisinoi.ro</a>
</string>
<string name="CV.2.foto">cv_02_strada_bazaca_1930_via_historia</string>
<string name="CV.2.foto_source"><a href="http:// www.historia.ro">historia.ro</a> </string>
<string name="CV.3.name">Hanul lui Manuc</string>
</resources>